  https://github.com/hadley/ggplot2/wiki/labeller#writing-new-labellers
  (@stefanedwards, #910)

BUG FIXES AND MINOR IMPROVEMENTS

* `aes()` no more treats variables like `a..x..b` as a calculated aesthetic.
  (@krlmlr, #834.)

* New `aes_q()` function to generate aesthetic specifications from
  quoted calls/names. `aes_string()` uses names `x` and `y` for first
  two unnamed arguments.

* `fortify.SpatialPolygonsDataFrame()` now calls `polygons` without
  requiring the `sp` to be loaded first (@seancarmody, #879).

* The outliers of `geom_boxplot()` use the default colour, size and shape from
  `geom_point()`. Changing the defaults of `geom_point()` with
  `update_geom_defaults()` will apply the same changes to the outliers of
  `geom_boxplot()`. Changing the defaults for the outliers was previously not
  possible. (@ThierryO, #757)

* `geom_dotplot()` now works with `qplot()`. (@rasmusab. Fixes #825)

* Marginal improvements to `theme_bw()` and `theme_classic()` (@jiho, #934)

* `stat_smooth()` checks for `method = "auto"` and `method = "glm"` in
  a safer way.

* Add `"none"` to documentation of `theme()` for parameter `legend.position`
  (@krlmlr, #829).

REMOVED FUNCTIONALITY

* `ggpcp()`, `ggfluctuation()`, `ggmissing()`, `ggstructure()`, and
  `ggorder()` are now defunct and have been removed.

ggplot2 0.9.3.1
----------------------------------------------------------------

BUG FIXES

* The theme element `legend.box.just` now can be set. It was not properly
  recognized before.

* `stat_density2d` previously resulted in errors when geom="polygon". This
  is fixed. (Fixes #741 and #749)

* `annotation_logticks` previously drew one set of logticks for each group,
  and inherited aesthetic mappings like colour. It no longer does this. (Fixes
  #767)

* Plots with geom_crossbar not display correct symbol in legend. (Fixes #768)

* Grouping is no longer set automatically by `stat_summary()`, allowing for