@@ -66,6 +66,9 @@ BUG FIXES AND MINOR IMPROVEMENTS
   quoted calls/names. `aes_string()` uses names `x` and `y` for first
   two unnamed arguments.
 
+* Clipping to the plot panel is now configurable, through a `clip` argument
+  to coordinate systems, e.g. `coord_cartesian(clip = "off")`.
+
 * `fortify.SpatialPolygonsDataFrame()` now calls `polygons` without
   requiring the `sp` to be loaded first (@seancarmody, #879).
 
